--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,6 @@ dependencies:
   flutter:
     sdk: flutter
   dio: ^3.0.8
-  shared_preferences: ^0.5.6
   sqflite: ^1.2.0
   path_provider: 1.5.1
   flutter_screenutil: ^0.7.0
@@ -35,11 +34,12 @@ dependencies:
   modal_progress_hud: ^0.1.3
   flutter_spinkit: ^4.1.1
   flutter_staggered_grid_view: ^0.3.0
-  flutter_qiniu: ^0.1.3
   multi_image_picker: ^4.6.1
   image_picker: ^0.6.3+4
   flutter_easyrefresh: ^2.0.9
   web_socket_channel: ^1.1.0
+  hive: ^1.4.1+1
+
 
 
 
