--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -46,7 +46,7 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         ndk {
             //选择要添加的对应 cpu 类型的 .so 库。
-            abiFilters  'armeabi-v7a','arm64-v8a'
+            abiFilters  'armeabi-v7a','arm64-v8a','x86'
 
         }
         manifestPlaceholders = [
